[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/UIManager.gd" type="Script" id=1]
[ext_resource path="res://UI/Camera/MainCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/CombatPanels/Skills/SkillMenu.tscn" type="PackedScene" id=3]

[node name="UIManager" type="Node2D"]
script = ExtResource( 1 )

[node name="MainCamera" parent="." instance=ExtResource( 2 )]
zoom = Vector2( 0.4, 0.4 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
offset_v = 0.0
offset_h = 0.0

[node name="InspectButton" type="Button" parent="."]
margin_left = -224.0
margin_top = -32.0
margin_right = -164.0
margin_bottom = -12.0
toggle_mode = true
text = "Inspect"

[node name="MoveButton" type="Button" parent="."]
margin_left = -224.0
margin_right = -164.0
margin_bottom = 20.0
toggle_mode = true
text = "Move"

[node name="AttackButton" type="Button" parent="."]
margin_left = -224.0
margin_top = 32.0
margin_right = -164.0
margin_bottom = 52.0
toggle_mode = true
text = "Attack"

[node name="SkillButton" type="Button" parent="."]
margin_left = -224.0
margin_top = 64.0
margin_right = -164.0
margin_bottom = 84.0
toggle_mode = true
text = "Skill"

[node name="PassButton" type="Button" parent="."]
margin_left = -224.0
margin_top = 96.0
margin_right = -164.0
margin_bottom = 116.0
text = "Pass"

[node name="SkillMenu" parent="." instance=ExtResource( 3 )]
margin_left = -160.0
margin_top = -80.0
margin_right = 16.0
margin_bottom = 32.0

[connection signal="pressed" from="InspectButton" to="." method="inspect_button_was_pressed"]
[connection signal="pressed" from="MoveButton" to="." method="move_button_was_pressed"]
[connection signal="pressed" from="AttackButton" to="." method="attack_button_was_pressed"]
[connection signal="pressed" from="SkillButton" to="." method="skill_button_was_pressed"]
[connection signal="pressed" from="PassButton" to="." method="pass_button_was_pressed"]
